# restaurant_management_web

./: .gitignore  README.md  docker-compose.yml  package-lock.json
api/: .env  Dockerfile  main.py  pyproject.toml
api/auth/: login.py
api/db/controllers/: classrooms.py  student_classroom.py  students.py  subject_result.py  subjects.py  tasks.py  teachers.py  user_infor.py
api/db/models/: __init__.py  account.py  base.py  classrooms.py  config.py  student_classroom.py  students.py  subject_result.py  subjects.py  tasks.py  teachers.py  user_infor.py
api/utils/: controllers.py
docker/api/: Dockerfile
docker/web/: Dockerfile
web/: Dockerfile  package-lock.json  package.json  tsconfig.json
web/public/: index.html
web/src/: App.vue  main.js  routes.js
web/src/mixin/: mixin.js
web/src/views/: Login.vue  Logout.vue
web/src/views/components/: DropDown.vue  Footer.vue  Form.vue  Navigation.vue  SnackBar.vue
web/src/views/dashboards/: DashBoard.vue
web/src/views/homepage/: HomePage.vue  Login.vue  Register.vue  SchoolBackground.vue
web/src/views/students/: DashBoard.vue  StudentInfor.vue
web/src/views/students/taskManager/: index.vue
web/src/views/teachers/: AddStudent.vue  DashBoard.vue  EditStudent.vue  StudentsList.vue
web/src/views/teachers/studentsPoint/: AddPoint.vue  index.vue
