[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Duc Ohlin <hoangminhduc4125@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.7"
flask = "^2.3.2"
pyjwt = "^2.8.0"
jwt = "^1.3.1"
peewee = "^3.16.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
